# pchips

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: akima_data.csv  hyman_data.csv  moler_data.csv  rpn14_data.csv  titanium_data.csv
src/pchips/: __init__.py  interpolate.py
src/pchips.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_akima.py  test_hyman.py  test_moler.py  test_rpn14.py  test_titanium.py
